--- a/Pages/Farmacia/R_Entrada.razor
+++ b/Pages/Farmacia/R_Entrada.razor
@@ -78,10 +78,21 @@
         <label for="Razon">Razon:</label>
         <RadzenTextBox  name="Razon" @bind-Value="entrada.Razon"/>
     </div>
+    <div class="d-flex justify-content-between">
         <div class="Entrada">
-        <label for="Precio">Fecha:</label>
-        <RadzenDatePicker @bind-Value=@entrada.Fecha Disabled ="true" ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+            <label for="Precio">Fecha:</label>
+            <RadzenDatePicker @bind-Value=@entrada.Fecha Disabled ="true" ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+        </div>
+            <div>
+                <a href="/S_Compras"><button type="button" class="btn btn-primary"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#28363c; border-color:#28363c; margin:10px;"
+                ><em><b>Seguimiento de compras</b></em></button></a>
+        </div>
+        
+
     </div>
+    
+   
     </div>
     <center>
         <button type="button" class="btn btn-primary"
@@ -111,7 +122,7 @@
         </Columns>
 
     </RadzenDataGrid>
-
+   
 
     </RadzenCard>
 </body>
