--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1>Administra tu cuenta</h1>
 
 <div>
-    <h2>Change your account settings</h2>
+    <h2>Configuraciones</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
@@ -27,3 +27,4 @@
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
+
