--- a/Shared/MainPage.razor
+++ b/Shared/MainPage.razor
@@ -1,38 +1,31 @@
-﻿@page "/"
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<PageTitle>Home</PageTitle>
-
-
-<head>
-    <style>
-        body {
-            background-image: url('https://wallpaper.dog/large/903575.jpg');
-            font-family: "Lato", sans-serif;
-            background-attachment: fixed;
-            background-size: cover;
-            opacity:0.9;
-        }
-
-        h1 {
-            color:#121420;
-            text-align:center;
-        }
-
-        p {
-            color:#121420;
-            text-align:center;
-        }
-    </style>
-</head>
+<style>
+body {  font-family: "Lato", sans-serif;
+        background-image: url('https://wallpaper.dog/large/903575.jpg');
+        background-attachment: fixed;
+        background-size: cover;
+        opacity:0.9;
+}
+</style>
 
 <body>
 
-    
+<!-- Navbar -->
+<div class="w3-top" >
+    <div class="w3-bar w3-light-blue w3-card w3-left-align w3-large" >
+        <img  class="w3-bar-item" src="https://blogger.googleusercontent.com/img/a/AVvXsEi4q-kqz34QpRGwgoXDEQtnX68vy8CdlmUBEVnZg6lsA-Om6KxTz1G7ayTUMecnJE9DzVhnlHQeHRg7gqiKMRv3uz-4X2MtwOi4fmf0x_bq6ZJja0StmVpsVxkStpREaH4prGhrCK-4cdguamc8EQDaKjaVEs7v5y-Vrdzb055J93UETHsAOy7bbUjb" height="40px" >
+        <div >
+        <a href="Identity/Account/Login" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hover-white">Login</a>
+        <a href="Identity/Account/Register" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hover-white">Registrarse</a>
+        </div>
+  </div>
+</div>
 
 <!-- Header -->
 <header class="w3-container w3-light-blue w3-center" style="padding:128px 16px">
@@ -91,7 +84,29 @@
     </div>
   </div>
 </div>
-    
-  
+
+
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Este sistema de software ha sido desarrollado por DURE Powerfull System, una empresa con amplia experiencia en la creación de soluciones tecnológicas innovadoras para el sector salud.</h1>
+</div>
+
+
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p class="w3-medium">Powered by DURE POWERFULL SYSTEM</p>
+</footer>
+
 
 </body>
+
+
+
+
